@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-17T16:07:09Z",
-  "count" : 9,
-  "count_minmax" : [ 9, 9 ],
-  "count_decinc" : [ -0, +9 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-05-18T00:26:27Z",
+  "count" : 16,
+  "count_minmax" : [ 9, 16 ],
+  "count_decinc" : [ -0, +16 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
