@@ -1,24 +1,10 @@
 {
-  "timestamp" : "2022-05-17T16:07:09Z",
-  "count_outdated" : 327,
-  "uniques_outdated" : 63,
-  "count" : 375,
-  "uniques" : 78,
+  "timestamp" : "2022-05-18T00:26:27Z",
+  "count_outdated" : 342,
+  "uniques_outdated" : 66,
+  "count" : 383,
+  "uniques" : 80,
   "views" : [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 13 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -29,23 +15,23 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
-      "count_minmax": [ 0, 7 ],
+      "count_minmax": [ 7, 7 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
@@ -70,10 +56,10 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 16,
+      "count_minmax": [ 9, 16 ],
+      "uniques": 4,
+      "uniques_minmax": [ 2, 4 ]
     }
   ]
 }
