@@ -1,17 +1,7 @@
 {
-  "count": 48,
-  "uniques": 10,
+  "count": 41,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 12,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -49,8 +39,8 @@
     },
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 9,
-      "uniques": 2
+      "count": 16,
+      "uniques": 4
     }
   ]
 }
